--- a/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
+++ b/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
@@ -19,4 +19,13 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+    </ItemGroup>
+
 </Project>
