--- a/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
+++ b/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
@@ -18,6 +18,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     </ItemGroup>
 
     <ItemGroup>
@@ -27,6 +28,14 @@
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
       <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <Folder Include="Areas\Writer\Controllers\" />
+      <Folder Include="Areas\Writer\Data\" />
+      <Folder Include="Areas\Writer\Models\" />
+      <Folder Include="Areas\Writer\Views\" />
     </ItemGroup>
 
 </Project>
