--- a/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
+++ b/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
         <PrivateAssets>all</PrivateAssets>
@@ -18,6 +20,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.9" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     </ItemGroup>
 
@@ -32,7 +35,6 @@
 
 
     <ItemGroup>
-      <Folder Include="Areas\Writer\Controllers\" />
       <Folder Include="Areas\Writer\Data\" />
       <Folder Include="Areas\Writer\Models\" />
       <Folder Include="Areas\Writer\Views\" />
