--- a/.gitignore
+++ b/.gitignore
@@ -393,3 +393,16 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,dotnetcore,rider,macos
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.AssemblyReference.cache
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.CoreCompileInputs.cache
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.pdb
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/ref/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/refint/BusinessLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.assets.cache
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.csproj.AssemblyReference.cache
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.csproj.CoreCompileInputs.cache
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.pdb
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/ref/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/refint/EntityLayer.dll
