--- a/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
+++ b/AspNetCore_Project/AspNetCore_Project/AspNetCore_Project.csproj
@@ -36,6 +36,7 @@
 
     <ItemGroup>
       <Folder Include="Areas\Writer\Data\" />
+      <Folder Include="wwwroot\user-image\" />
     </ItemGroup>
 
 </Project>
