Added WriterMessage table

--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,7 @@ AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.dll
 AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.pdb
 AspNetCore_Project/EntityLayer/obj/Debug/net7.0/ref/EntityLayer.dll
 AspNetCore_Project/EntityLayer/obj/Debug/net7.0/refint/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/refint/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/ref/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.pdb
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.dll
