Edits have been made in the admin section

--- a/.gitignore
+++ b/.gitignore
@@ -410,3 +410,14 @@ AspNetCore_Project/EntityLayer/obj/Debug/net7.0/refint/EntityLayer.dll
 AspNetCore_Project/EntityLayer/obj/Debug/net7.0/ref/EntityLayer.dll
 AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.pdb
 AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.csproj.CoreCompileInputs.cache
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/EntityLayer.pdb
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/ref/EntityLayer.dll
+AspNetCore_Project/EntityLayer/obj/Debug/net7.0/refint/EntityLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/refint/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/ref/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.pdb
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.CoreCompileInputs.cache
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.AssemblyReference.cache
