--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,5 @@ AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.pdb
 AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.dll
 AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.CoreCompileInputs.cache
 AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.AssemblyReference.cache
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.pdb
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.dll
