Added transactions with Ajax

--- a/.gitignore
+++ b/.gitignore
@@ -426,3 +426,9 @@ AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.dll
 AspNetCore_Project/AspNetCore_Project/wwwroot/Template/images/.DS_Store
 AspNetCore_Project/AspNetCore_Project/wwwroot/.DS_Store
 AspNetCore_Project/AspNetCore_Project/wwwroot/Template/images/.DS_Store
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/refint/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/ref/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.pdb
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.dll
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.CoreCompileInputs.cache
+AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.AssemblyReference.cache
