--- a/.gitignore
+++ b/.gitignore
@@ -432,3 +432,5 @@ AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.pdb
 AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.dll
 AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.CoreCompileInputs.cache
 AspNetCore_Project/BusinessLayer/obj/Debug/net7.0/BusinessLayer.csproj.AssemblyReference.cache
+AspNetCore_Project/EntityLayer/obj/rider.project.model.nuget.info
+AspNetCore_Project/BusinessLayer/obj/rider.project.model.nuget.info
